# b2-sdk-python

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.release.md  appveyor.yml  noxfile.py  pre-commit.sh  pyproject.toml  requirements-doc.txt  requirements-setup.txt  requirements-test.txt  requirements.txt  run-single-unit-test.sh  setup.cfg  setup.py  sqlite_account_info_schema.py  test_b2_command_line.py
.github/: SUPPORT.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml
b2_sdk/: __main__.py  b2http.py  bounded_queue_executor.py  bucket.py  cache.py  download_dest.py  exception.py  progress.py  raw_api.py  session.py  unfinished_large_file.py  upload_source.py  utils.py  version.py
b2_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
b2_sdk/account_info/: abstract.py  sqlite_account_info.py  test_upload_url_concurrency.py  upload_url_pool.py
b2_sdk/sync/: action.py  folder.py  folder_parser.py  policy.py  policy_manager.py  report.py
b2_sdk/transferer/: parallel.py  range.py  simple.py
b2sdk/: __init__.py  __main__.py  api.py  api_config.py  application_key.py  b2http.py  b2http_adapter.py  b2response.py  bounded_queue_executor.py  bucket.py  cache.py  download_dest.py  exception.py  file_lock.py  file_version.py  filter.py  glob_matcher.py  http_constants.py  included_sources.py  parse_args.py  part.py  progress.py  raw_api.py  raw_simulator.py  session.py  unfinished_large_file.py  upload_source.py  utils.py  version.py  version_utils.py
b2sdk/_internal/: __init__.py  api.py  api_config.py  application_key.py  b2http.py  bounded_queue_executor.py  bucket.py  cache.py  exception.py  file_lock.py  file_version.py  filter.py  http_constants.py  included_sources.py  progress.py  raw_api.py  raw_simulator.py  session.py  types.py  version_utils.py
b2sdk/_pyinstaller/: __init__.py  hook-b2sdk.py
b2sdk/_v2/: __init__.py  exception.py
b2sdk/_v3/: __init__.py  api.py  exception.py  transfer.py
b2sdk/account_info/: __init__.py  abstract.py  exception.py  in_memory.py  sqlite_account_info.py  stub.py  test_upload_url_concurrency.py  upload_url_pool.py
b2sdk/encryption/: __init__.py  provider.py  setting.py  types.py
b2sdk/large_file/: __init__.py  part.py  services.py  unfinished_large_file.py
b2sdk/replication/: __init__.py  monitoring.py  setting.py  setup.py  types.py
b2sdk/requests/: README.md  __init__.py  included_source_meta.py
b2sdk/scan/: __init__.py  exception.py  folder.py  folder_parser.py  path.py  policies.py  report.py  scan.py
b2sdk/stream/: __init__.py  base.py  chained.py  hashing.py  progress.py  range.py  stdin.py  wrapper.py
b2sdk/sync/: __init__.py  action.py  encryption_provider.py  exception.py  file.py  folder.py  folder_parser.py  path.py  policy.py  policy_manager.py  report.py  scan_policies.py  sync.py
b2sdk/transfer/: __init__.py  transfer_manager.py
b2sdk/transferer/: __init__.py  abstract.py  file_metadata.py  parallel.py  range.py  simple.py  transferer.py
b2sdk/utils/: __init__.py  docs.py  escape.py  http_date.py  range_.py  thread_pool.py  typing.py
b2sdk/v0/: __init__.py  account_info.py  api.py  bucket.py  exception.py  sync.py
b2sdk/v1/: __init__.py  account_info.py  api.py  b2http.py  bucket.py  cache.py  download_dest.py  exception.py  file_metadata.py  file_version.py  session.py  sync.py
b2sdk/v2/: __init__.py  _compat.py  account_info.py  api.py  api_config.py  application_key.py  b2http.py  bucket.py  exception.py  file_version.py  large_file.py  raw_api.py  raw_simulator.py  session.py  sync.py  transfer.py  utils.py  version_utils.py
b2sdk/v3/: __init__.py  exception.py
changelog.d/: +17dd34ae.fixed.md  +NoPaymentHistory_exception.added.md  +account_info_change_dir.infrastructure.md  +api_request_methods.added.md  +apiver-v2-http-config-services.fixed.md  +apiver_v3.changed.md  +application_keys_multi_bucket.changed.md  +authorize_account.changed.md  +b2_api_v4.changed.md  +b2http-upload-no-retries.fixed.md  +b2http_tests_refactor.infrastructure.md  +bucket-manager-create-retries.infrastructure.md  +bucket-manager-debugging.infrastructure.md  +bucket_ls_filters.added.md  +bucket_unhide_file.added.md  +built-sdist-import-check.infrastructure.md  +bump-pip.infrastructure.md  +can-stream-empty-stream.fixed.md  +cli-compat.infrastructure.md  +create_key_multi_bucket.changed.md  +datetime.utcnow_deprecation.fixed.md  +daysFromStartingToCancelingUnfinishedLargeFiles.added.md  +docs_graph_fix.fixed.md  +download_headers_str.fixed.md  +drop-python3.9.removed.md  +drop_py37.removed.md  +duplicate-warnings.fixed.md  +escape_control_characters.added.md  +escape_funcs.fixed.md  +fix_decode_content.fixed.md  +fix_large_file_continuation.fixed.md  +fix_package_author.fixed.md  +fix_perms_handling_for_win.fixed.md  +fix_str_of_v2_BucketIdNotFound.fixed.md  +fix_truncated_download.fixed.md  +handle_html_errors.fixed.md  +handle_invalid_error_format.fixed.md  +integration_tests_apiver_v3.infrastructure.md  +internal.changed.md  +invalid-filename.fixed.md  (+75 more)
contrib/: debug_logs.ini
doc/: Makefile  markup-test.rst  render_sqlite_account_info_schema.sh  sqlite_account_info_schema.py  watch-and-regenerate.sh
doc/source/: account_info.rst  advanced.rst  api_internal.rst  api_public.rst  api_reference.rst  api_types.rst  api_versions.rst  authentication.rst  b2.account_info.rst  b2.rst  b2.sync.rst  b2sdk.account_info.rst  b2sdk.rst  b2sdk.sync.rst  b2sdk.transferer.rst  conf.py  contributing.rst  examples.rst  glossary.rst  index.rst  install.rst  missing.txt  modules.rst  quick_start.rst  remarks.txt  (+5 more)
test/: __init__.py  conftest.py  helpers.py  stub_account_info.py  test_account_info.py  test_api.py  test_b2http.py  test_bounded_queue_executor.py  test_bucket.py  test_download_dest.py  test_exception.py  test_parse_args.py  test_policy.py  test_progress.py  test_raw_api.py  test_scan_policies.py  test_session.py  test_sync.py  test_sync_report.py  test_utils.py  test_version_utils.py
(+429 files in other folders)
