[project]
name = "b2sdk"
description = "Backblaze B2 SDK"
dynamic = ["version"]
authors = [
    {name = "Backblaze, Inc", email = "support@backblaze.com"},
]
dependencies = [
    "importlib-metadata>=3.3.0; python_version < '3.8'",
    "logfury<2.0.0,>=1.0.1",
    "requests<3.0.0,>=2.9.1",
    "tqdm<5.0.0,>=4.5.0",
    "typing-extensions>=4.7.1; python_version < '3.12'",
    "setuptools>=60.0",
    "packaging>=21.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
keywords = ["backblaze", "b2", "cloud", "storage"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
# doc group should be moved to dev dependencies when we release
# a new major version.
doc = [
    "sadisplay>=0.4.9",
    "sphinx>=5.3.0, <6",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.23.0",
    "sphinxcontrib-plantuml>=0.27",
    "tornado>=6.3.3; python_version>='3.8'",
]

[project.urls]
Homepage = "https://github.com/Backblaze/b2-sdk-python"

[project.entry-points.pyinstaller40]
hook-dirs = "b2sdk._pyinstaller:get_hook_dirs"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "new bsd",
    "bsd license",
    "new bsd license",
    "simplified bsd",
    "apache",
    "apache 2.0",
    "apache software",
    "apache software license",
    "lgpl",
    "gnu lgpl",
    "gnu library or lesser general public license (lgpl)",
    "lgpl with exceptions or zpl",
    "isc license",
    "isc license (iscl)",
    "mit",
    "mit license",
    "mozilla public license 2.0 (mpl 2.0)",
    "mpl-2.0",
    "psf",
    "python software foundation",
    "python software foundation license",
    "zpl 2.1",
]
unauthorized_licences = [
    "affero",
    "agpl",
    "gpl v3",
    "gpl v2",
    "gpl",
]
dependencies = true
optional_dependencies = ["doc"]

[tool.ruff]
# TODO add D
select = ["E", "F", "I", "UP"]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
]
line-length = 100
target-version = "py37"

[tool.ruff.per-file-ignores]
"__init__.py" = ["I", "F401"]
"b2sdk/v*/**" = ["I", "F403", "F405"]
"b2sdk/_v*/**" = ["I", "F403", "F405"]
"test/**" = ["D", "F403", "F405"]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/Backblaze/b2-sdk-python/releases/tag/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/Backblaze/b2-sdk-python/issues/{issue})"

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Doc"
showcontent = true

[[tool.towncrier.type]]
directory = "infrastructure"
name = "Infrastructure"
showcontent = true

[tool.pdm]
package-type = "library"

[tool.pdm.build]
includes = ["b2sdk"]

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
format = [
    "yapf==0.27",
    "ruff==0.0.270",
]
lint = [
    "yapf==0.27",
    "ruff==0.0.270",
    "pytest==6.2.5",
    "liccheck==0.9.2",
]
test = [
    "coverage==7.2.7",
    "pytest==6.2.5",
    "pytest-cov==3.0.0",
    "pytest-mock==3.6.1",
    "pytest-lazy-fixture==0.6.3",
    "pytest-xdist==2.5.0",
    "pytest-timeout==2.1.0",
]
release = [
    "towncrier==23.11.0; python_version>='3.8'",
]