[project]
name = "b2sdk"
description = "Backblaze B2 SDK"
dynamic = ["version"]
authors = [
    {name = "Backblaze Inc", email = "support@backblaze.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["backblaze", "b2", "cloud", "storage"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "annotated_types>=0.5.0",
    "logfury<2.0.0,>=1.0.1",
    "requests<3.0.0,>=2.33.0",
    "typing-extensions>=4.7.1; python_version < '3.12'",
]

[project.optional-dependencies]
full = [
    "tqdm<5.0.0,>=4.5.0",
    "pydantic>=2.0.1,<2.13; platform_python_implementation == 'PyPy' and python_version < '3.11'",  # newer pydantic versions do not play well with PyPy 3.10
    "pydantic>=2.0.1; platform_python_implementation != 'PyPy' or python_version >= '3.11'",
]

[dependency-groups]
nox = [
    "nox>=2025.11.12",
]
format = [
    "ruff~=0.8.4",
]
lint = [
    "pip>=26.1",
    "ruff~=0.8.4",
    "pytest>=9.0.3,<10",
    "tenacity>=9.1.4,<10",
    "liccheck==0.9.2",
    "setuptools",
]
test = [
    "coverage>=7.13.5,<8",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
    "pytest-mock>=3.15.1,<4",
    "pytest-lazy-fixtures>=1.4.0,<2",
    "pytest-xdist>=3.8.0,<4",
    "pytest-timeout>=2.4.0,<3",
    "pytest-watcher>=0.6.3,<1",
    "tenacity>=9.1.4,<10",
    "tqdm<5.0.0,>=4.5.0",
    "pydantic>=2.0.1,<2.13; platform_python_implementation == 'PyPy' and python_version < '3.11'",
    "pydantic>=2.13.3,<3; platform_python_implementation != 'PyPy' or python_version >= '3.11'",
    "pywin32>=311,<312; sys_platform == \"win32\" and platform_python_implementation!='PyPy'",
    "responses>=0.26.0,<1",
]
release = [
    "towncrier==23.11.0",
]
doc = [
    "sadisplay>=0.4.9",
    "sphinx>=7.4.7, <8",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.23.0",
    "sphinxcontrib-plantuml>=0.27",
    "tornado>=6.3.3",
]

[project.urls]
Homepage = "https://github.com/Backblaze/b2-sdk-python"

[project.entry-points.pyinstaller40]
hook-dirs = "b2sdk._pyinstaller:get_hook_dirs"

[build-system]
requires = ["hatchling>=1.24.2", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["b2sdk"]

[tool.hatch.build.targets.sdist]
include = ["b2sdk"]

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "new bsd",
    "bsd license",
    "new bsd license",
    "simplified bsd",
    'bsd-3-clause',
    "apache",
    "apache 2.0",
    "apache software",
    "apache software license",
    "lgpl",
    "gnu lgpl",
    "gnu library or lesser general public license (lgpl)",
    "lgpl with exceptions or zpl",
    "isc license",
    "isc license (iscl)",
    "mit",
    "mit license",
    "mozilla public license 2.0 (mpl 2.0)",
    "mpl-2.0",
    "psf",
    "psf-2.0",
    "python software foundation",
    "python software foundation license",
    "zpl 2.1",
]
unauthorized_licences = [
    "affero",
    "agpl",
    "gpl v3",
    "gpl v2",
    "gpl",
]
dependencies = true
optional_dependencies = ["full"]

[tool.ruff]
# TODO add D
select = ["E", "F", "I", "UP"]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
    "UP031",
]
line-length = 100
target-version = "py37"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.per-file-ignores]
"__init__.py" = ["I", "F401"]
"b2sdk/v3/__init__.py" = ["E402"]
"b2sdk/v*/**" = ["I", "F403", "F405"]
"b2sdk/_v*/**" = ["I", "F403", "F405"]
"test/**" = ["D", "F403", "F405"]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/Backblaze/b2-sdk-python/releases/tag/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/Backblaze/b2-sdk-python/issues/{issue})"

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Doc"
showcontent = true

[[tool.towncrier.type]]
directory = "infrastructure"
name = "Infrastructure"
showcontent = true
